--- a/dag1.html
+++ b/dag1.html
@@ -24,20 +24,7 @@
         </nav>
 
         <main>
-            <!-- Bli kjent -->
-            <section class="concept">
-                <h2>👋 Bli kjent (15 min)</h2>
-                <div class="steps">
-                    <div class="steps-title">📝 Aktiviteter:</div>
-                    <ul>
-                        <li><strong>Navnelek:</strong> Si navnet ditt + noe som starter på samme bokstav (f.eks. "Kari-Kake")</li>
-                        <li><strong>Silent lineup:</strong> Still dere i rekke etter alder uten å snakke!</li>
-                        <li><strong>Lag regler sammen:</strong> Hva slags regler trenger vi for å ha det gøy sammen?</li>
-                    </ul>
-                </div>
-            </section>
-
-            <!-- Konsept 1: Hva er programmering? -->
+             <!-- Konsept 1: Hva er programmering? -->
             <section class="concept">
                 <h2>🤖 Konsept 1: Hva er programmering? (20 min)</h2>
                 
@@ -108,14 +95,14 @@
                         <div class="step">
                             <div class="step-number">2</div>
                             <div class="step-content">
-                                <h4>Start ny verden</h4>
+                                <h4>Start ny verden i kreativ modus</h4>
                             </div>
                         </div>
                         <div class="step">
                             <div class="step-number">3</div>
                             <div class="step-content">
-                                <h4>Åpne kodebyggeren</h4>
-                                <p>Rosa puslespillbrikke "MakeCode"</p>
+                                <h4>Trykk på C for å åpne kodebyggeren</h4>
+                                <p>Velg rosa puslespillbrikke "MakeCode"</p>
                             </div>
                         </div>
                         <div class="step">
@@ -158,7 +145,9 @@
                         <button class="copy-btn" onclick="copyCode(this)">Kopier</button>
                     </div>
                     <pre>navn = "Ola"
-alder = 12</pre>
+                        alder = 12
+                        vekt = 56.5
+                </pre>
                 </div>
 
                 <div class="important">
