--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                 <div class="day-card">
                     <div class="day-header">
                         <h3>📅 Dag 3</h3>
-                        <span class="day-title">Koordinater og Kreativitet</span>
+                        <span class="day-title">Interaktive Systemer</span>
                     </div>
                     <div class="day-content">
                         <h4>Du lærer:</h4>
                         <ul>
-                            <li>Koordinatsystemer i 3D</li>
-                            <li>Bygge med blocks.fill()</li>
-                            <li>Lage egne chat-kommandoer</li>
-                            <li>Kreativt byggeprosjekt</li>
+                            <li>Kommandoblocker og hvordan de fungerer</li>
+                            <li>Python som lytter til verden</li>
+                            <li>Lage interaktive dører og systemer</li>
+                            <li>Koordinering mellom blokker og kode</li>
                         </ul>
                         <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Feriedestinasjon! 🏖️
+                            <strong>Hovedprosjekt:</strong> Interaktiv dør! 🚪
                         </div>
                     </div>
                     <a href="dag3.html" class="day-link">Start Dag 3 →</a>
@@ -83,21 +83,41 @@
                 <div class="day-card">
                     <div class="day-header">
                         <h3>📅 Dag 4</h3>
-                        <span class="day-title">Interaktive Systemer</span>
+                        <span class="day-title">Bevegelse og Monstre</span>
                     </div>
                     <div class="day-content">
                         <h4>Du lærer:</h4>
                         <ul>
-                            <li>Kommandoblocker og hvordan de fungerer</li>
-                            <li>Python som lytter til verden</li>
-                            <li>Lage interaktive systemer</li>
-                            <li>Koordinering mellom blokker og kode</li>
+                            <li>Oppdage spillerens bevegelse</li>
+                            <li>Spawne monstre med kommandoblocker</li>
+                            <li>Lage farlige områder og feller</li>
+                            <li>Kombinere bevegelse med automatisering</li>
                         </ul>
                         <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Interaktiv dør! 🚪
+                            <strong>Hovedprosjekt:</strong> Monster-spawn system! 👾
                         </div>
                     </div>
                     <a href="dag4.html" class="day-link">Start Dag 4 →</a>
+                </div>
+
+                <div class="day-card">
+                    <div class="day-header">
+                        <h3>📅 Dag 5</h3>
+                        <span class="day-title">Oppsummering og Presentasjon</span>
+                    </div>
+                    <div class="day-content">
+                        <h4>Dagens program:</h4>
+                        <ul>
+                            <li>Oppsummering av hele kurset</li>
+                            <li>Egen tid til å jobbe på prosjekter</li>
+                            <li>Forberede presentasjoner</li>
+                            <li>Vise frem til foreldre og familie</li>
+                        </ul>
+                        <div class="day-highlight">
+                            <strong>Hovedfokus:</strong> Presentasjon for foreldre! 👨‍👩‍👧‍👦
+                        </div>
+                    </div>
+                    <a href="dag5.html" class="day-link">Start Dag 5 →</a>
                 </div>
             </div>
 
