Lagt til ny side for avanserte koder og eksempler, inkludert Snake-spill og parkour-systemer. Oppdatert kursoversikt for fem dager.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <div class="course-overview">
                 <h2>📚 Kursoversikt</h2>
-                <p>Velkommen til en spennende reise inn i programmering! I løpet av fire dager skal du lære grunnleggende konsepter i koding ved å bruke Minecraft Education Edition.</p>
+                <p>Velkommen til en spennende reise inn i programmering! I løpet av fem dager skal du lære grunnleggende konsepter i koding ved å bruke Minecraft Education Edition.</p>
             </div>
 
             <div class="days-grid">
@@ -119,6 +119,27 @@
                     </div>
                     <a href="dag5.html" class="day-link">Start Dag 5 →</a>
                 </div>
+
+                <!-- NEW: Koder section -->
+                <div class="day-card" style="border-color: #17a2b8; background: linear-gradient(145deg, #d1ecf1, #bee5eb);">
+                    <div class="day-header">
+                        <h3>💻 Koder</h3>
+                        <span class="day-title">Avanserte Eksempler</span>
+                    </div>
+                    <div class="day-content">
+                        <h4>Du finner:</h4>
+                        <ul>
+                            <li>Snake-spill og parkour-systemer</li>
+                            <li>Avanserte prosjekter og eksempler</li>
+                            <li>Kode-maler for egne prosjekter</li>
+                            <li>Tips for å dele egen kode</li>
+                        </ul>
+                        <div class="day-highlight" style="background: #b8daff;">
+                            <strong>Innhold:</strong> Kule koder og eksempler! 🐍
+                        </div>
+                    </div>
+                    <a href="koder.html" class="day-link" style="background: linear-gradient(45deg, #17a2b8, #138496);">Utforsk Koder →</a>
+                </div>
             </div>
 
             <div class="getting-started">
@@ -144,6 +165,33 @@
                             <h4>Åpne kodebyggeren</h4>
                             <p>Trykk på den rosa puslespillbrikken "MakeCode" for å begynne å kode!</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- NEW: Quick access section -->
+            <div class="tips-section">
+                <h2>⚡ Hurtigtilgang</h2>
+                <div class="tips-grid">
+                    <div class="tip-card" style="border-top-color: #28a745;">
+                        <h4>📖 Grunnleggende</h4>
+                        <p>Start med Dag 1-2 for å lære programmering fra bunnen av</p>
+                        <a href="dag1.html" style="color: #28a745; text-decoration: none; font-weight: bold;">→ Start her</a>
+                    </div>
+                    <div class="tip-card" style="border-top-color: #ffc107;">
+                        <h4>🔧 Byggeprosjekter</h4>
+                        <p>Dag 3-4 for interaktive systemer og avanserte prosjekter</p>
+                        <a href="dag3.html" style="color: #ffc107; text-decoration: none; font-weight: bold;">→ Bygg noe kult</a>
+                    </div>
+                    <div class="tip-card" style="border-top-color: #17a2b8;">
+                        <h4>🐍 Avansert</h4>
+                        <p>Snake-spill og andre kule eksempler for erfarne kodere</p>
+                        <a href="koder.html" style="color: #17a2b8; text-decoration: none; font-weight: bold;">→ Se eksempler</a>
+                    </div>
+                    <div class="tip-card" style="border-top-color: #6f42c1;">
+                        <h4>🎓 Presentasjon</h4>
+                        <p>Dag 5 for å fullføre kurset og vise frem til foreldre</p>
+                        <a href="dag5.html" style="color: #6f42c1; text-decoration: none; font-weight: bold;">→ Avslutt kurset</a>
                     </div>
                 </div>
             </div>
