--- a/koder.html
+++ b/koder.html
@@ -47,6 +47,92 @@
                 </div>
             </section>
 
+            <!-- Ring Race Timer Section -->
+            <section class="exercise">
+                <div class="exercise-header">
+                    <h3>🏁 Ring Race Timer</h3>
+                </div>
+                
+                <p>En utfordring der du må fly gjennom to ringer så raskt som mulig! Koden måler tiden din og gir deg poeng for hver ring.</p>
+                
+                <div class="solution">
+                    <div class="solution-header" onclick="toggleSolution('ring_race')">
+                        <span>👀 Vis Ring Race Kode</span>
+                        <span class="toggle-icon">▼</span>
+                    </div>
+                    <div class="solution-content" id="ring_race">
+                        <div class="code-block">
+                            <div class="code-title">
+                                <span>Ring Race Timer</span>
+                                <button class="copy-btn" onclick="copyCode(this)">Kopier</button>
+                            </div>
+                            <pre>RING1 = world(53, -57, -62)
+            RING2 = world(30, -57, -70)
+
+            def on_run_in_background():
+                # Reset course so detection isn't instant
+                blocks.place(AIR, RING1)
+                blocks.place(AIR, RING2)
+
+                ring1done = False
+                ring2done = False
+                poeng = 0
+                started = False
+                finished = False
+
+                start_ticks = 0
+                last_check_tick = 0
+                check_interval_ticks = 2  # only check every 2 game ticks (~0.1s)
+
+                while True:
+                    current_tick = gameplay.time_query(GAME_TIME)
+
+                    # Only run logic if enough ticks have passed
+                    if current_tick - last_check_tick >= check_interval_ticks:
+                        last_check_tick = current_tick
+
+                        # First ring detection
+                        if not ring1done and blocks.test_for_block(GLASS, RING1):
+                            ring1done = True
+                            poeng += 1
+                            player.say("RING 1 done")
+                            if not started:
+                                started = True
+                                start_ticks = current_tick
+                                continue
+
+                        # Second ring detection
+                        if not ring2done and blocks.test_for_block(GLASS, RING2):
+                            ring2done = True
+                            poeng += 1
+                            player.say("RING 2 done")
+                            if not started:
+                                started = True
+                                start_ticks = current_tick
+                                continue
+
+                        # Finish check
+                        if started and not finished and ring1done and ring2done:
+                            end_ticks = gameplay.time_query(GAME_TIME)
+                            elapsed_ticks = end_ticks - start_ticks
+                            total_seconds = elapsed_ticks // 20
+                            minutes = total_seconds // 60
+                            seconds = total_seconds % 60
+                            time_str = str(minutes) + ":" + ("0" if seconds &lt; 10 else "") + str(seconds)
+
+                            player.say("Du har fullført alle ringer")
+                            player.say("Du har " + str(poeng) + " poeng")
+                            player.say("Tid: " + time_str)
+                            finished = True
+                            break
+
+            loops.run_in_background(on_run_in_background)</pre>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
             <!-- Snake Game Section -->
             <section class="concept">
                 <h2>🐍 Snake-spill Pakke</h2>
