feat: create new landing page

--- a/index.html
+++ b/index.html
@@ -1,130 +1,95 @@
+--- START OF FILE index.html ---
+
 <!DOCTYPE html>
 <html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft Kodekurs</title>
+    <title>Kodekurs for Barn</title> <!-- Ny tittel for å reflektere bredden -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎮 Minecraft Kodekurs</h1>
-            <p class="subtitle">Lær programmering gjennom Minecraft Education Edition</p>
+            <h1>🎮 Kodekurs for Barn</h1> <!-- Ny tittel -->
+            <p class="subtitle">Lær programmering med Minecraft, Roblox og Python!</p>
         </header>
 
         <main>
             <div class="course-overview">
-                <h2>📚 Kursoversikt</h2>
-                <p>Velkommen til en spennende reise inn i programmering! I løpet av fem dager skal du lære grunnleggende konsepter i koding ved å bruke Minecraft Education Edition.</p>
+                <h2>📚 Velg ditt eventyr!</h2>
+                <p>Velkommen til en spennende reise inn i programmering! Her kan du velge hvilket tema du ønsker å utforske.</p>
             </div>
 
             <div class="days-grid">
-                <div class="day-card">
+                <!-- Minecraft Kurs -->
+                <div class="day-card" style="border-color: #28a745; background: linear-gradient(145deg, #d4edda, #c3e6cb);">
                     <div class="day-header">
-                        <h3>📅 Dag 1</h3>
-                        <span class="day-title">Grunnleggende Programmering</span>
+                        <h3>⛏️ Minecraft Kodekurs</h3>
+                        <span class="day-title">Lær med Minecraft Education Edition</span>
                     </div>
                     <div class="day-content">
-                        <h4>Du lærer:</h4>
+                        <h4>Fokus:</h4>
                         <ul>
-                            <li>Hva programmering er</li>
-                            <li>Variabler og hvordan lagre informasjon</li>
-                            <li>For-løkker for å gjenta kode</li>
-                            <li>Spawne dyr i Minecraft</li>
+                            <li>Grunnleggende programmering</li>
+                            <li>Agenten og automatisering</li>
+                            <li>Interaktive byggverk</li>
+                            <li>Prosjekter og kreativitet</li>
                         </ul>
-                        <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Kylling-regn! 🐔
+                        <div class="day-highlight" style="background: #aed581;">
+                            <strong>Hovedaktivitet:</strong> Bygg og utforsk! 🌍
                         </div>
                     </div>
-                    <a href="dag1.html" class="day-link">Start Dag 1 →</a>
+                    <a href="dag1.html" class="day-link" style="background: linear-gradient(45deg, #28a745, #218838);">Start Minecraft Kurset →</a>
                 </div>
 
-                <div class="day-card">
+                <!-- Roblox Kurs -->
+                <div class="day-card" style="border-color: #007bff; background: linear-gradient(145deg, #e0f2ff, #cce5ff);">
                     <div class="day-header">
-                        <h3>📅 Dag 2</h3>
-                        <span class="day-title">Agenten og Logikk</span>
+                        <h3>🌟 Roblox Studio Kodekurs</h3>
+                        <span class="day-title">Lag dine egne Roblox-spill med Lua</span>
                     </div>
                     <div class="day-content">
-                        <h4>Du lærer:</h4>
+                        <h4>Fokus:</h4>
                         <ul>
-                            <li>Hva syntax er og hvorfor det er viktig</li>
-                            <li>Styre agenten i Minecraft</li>
-                            <li>If-setninger for beslutninger</li>
-                            <li>Bygge komplekse strukturer</li>
+                            <li>Introduksjon til Roblox Studio</li>
+                            <li>Programmering med Lua</li>
+                            <li>Skape objekter og verdener</li>
+                            <li>Lage enkle spillmekanikker</li>
                         </ul>
-                        <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Berg-og-dal-bane! 🎢
+                        <div class="day-highlight" style="background: #90caf9;">
+                            <strong>Hovedaktivitet:</strong> Bygg et Obby! 🏃
                         </div>
                     </div>
-                    <a href="dag2.html" class="day-link">Start Dag 2 →</a>
+                    <a href="roblox.html" class="day-link" style="background: linear-gradient(45deg, #007bff, #0056b3);">Start Roblox Kurset →</a>
                 </div>
 
-                <div class="day-card">
+                <!-- Python Kurs -->
+                <div class="day-card" style="border-color: #ffc107; background: linear-gradient(145deg, #fff3cd, #ffeeba);">
                     <div class="day-header">
-                        <h3>📅 Dag 3</h3>
-                        <span class="day-title">Interaktive Systemer</span>
+                        <h3>🐍 Python Grunnkurs</h3>
+                        <span class="day-title">Lær det mest populære kodespråket</span>
                     </div>
                     <div class="day-content">
-                        <h4>Du lærer:</h4>
+                        <h4>Fokus:</h4>
                         <ul>
-                            <li>Kommandoblocker og hvordan de fungerer</li>
-                            <li>Python som lytter til verden</li>
-                            <li>Lage interaktive dører og systemer</li>
-                            <li>Koordinering mellom blokker og kode</li>
+                            <li>Hva er Python?</li>
+                            <li>Variabler og datatyper</li>
+                            <li>Løkker og betingelser</li>
+                            <li>Små programmer og spill</li>
                         </ul>
-                        <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Interaktiv dør! 🚪
+                        <div class="day-highlight" style="background: #ffecb3;">
+                            <strong>Hovedaktivitet:</strong> Første program! 🚀
                         </div>
                     </div>
-                    <a href="dag3.html" class="day-link">Start Dag 3 →</a>
+                    <a href="python.html" class="day-link" style="background: linear-gradient(45deg, #ffc107, #e0a800);">Start Python Kurset →</a>
                 </div>
 
-                <div class="day-card">
-                    <div class="day-header">
-                        <h3>📅 Dag 4</h3>
-                        <span class="day-title">Bevegelse og Monstre</span>
-                    </div>
-                    <div class="day-content">
-                        <h4>Du lærer:</h4>
-                        <ul>
-                            <li>Oppdage spillerens bevegelse</li>
-                            <li>Spawne monstre med kommandoblocker</li>
-                            <li>Lage farlige områder og feller</li>
-                            <li>Kombinere bevegelse med automatisering</li>
-                        </ul>
-                        <div class="day-highlight">
-                            <strong>Hovedprosjekt:</strong> Monster-spawn system! 👾
-                        </div>
-                    </div>
-                    <a href="dag4.html" class="day-link">Start Dag 4 →</a>
-                </div>
-
-                <div class="day-card">
-                    <div class="day-header">
-                        <h3>📅 Dag 5</h3>
-                        <span class="day-title">Oppsummering og Presentasjon</span>
-                    </div>
-                    <div class="day-content">
-                        <h4>Dagens program:</h4>
-                        <ul>
-                            <li>Oppsummering av hele kurset</li>
-                            <li>Egen tid til å jobbe på prosjekter</li>
-                            <li>Forberede presentasjoner</li>
-                            <li>Vise frem til foreldre og familie</li>
-                        </ul>
-                        <div class="day-highlight">
-                            <strong>Hovedfokus:</strong> Presentasjon for foreldre! 👨‍👩‍👧‍👦
-                        </div>
-                    </div>
-                    <a href="dag5.html" class="day-link">Start Dag 5 →</a>
-                </div>
-
-                <!-- NEW: Koder section -->
+                <!-- Koder og Eksempler (Flyttet opp litt for tydelighet) -->
                 <div class="day-card" style="border-color: #17a2b8; background: linear-gradient(145deg, #d1ecf1, #bee5eb);">
                     <div class="day-header">
-                        <h3>💻 Koder</h3>
-                        <span class="day-title">Avanserte Eksempler</span>
+                        <h3>💻 Koder & Eksempler</h3>
+                        <span class="day-title">Avanserte Koder og Prosjekter</span>
                     </div>
                     <div class="day-content">
                         <h4>Du finner:</h4>
@@ -142,56 +107,31 @@
                 </div>
             </div>
 
+            <!-- "Kom i gang" og "Viktige tips" seksjonene kan ligge her eller flyttes til hver enkelt kurs-hovedside om ønskelig, men for nå lar vi dem være for generell info -->
             <div class="getting-started">
                 <h2>🚀 Kom i gang</h2>
+                <p>Uansett hvilket kurs du velger, er grunnprinsippene de samme for å komme i gang med koding:</p>
                 <div class="setup-steps">
                     <div class="step">
                         <div class="step-number">1</div>
                         <div class="step-content">
-                            <h4>Åpne Minecraft Education Edition</h4>
-                            <p>Sørg for at du har Minecraft Education Edition installert på datamaskinen din.</p>
+                            <h4>Velg et kurs!</h4>
+                            <p>Trykk på et av kurskortene over for å starte ditt kodeeventyr.</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">2</div>
                         <div class="step-content">
-                            <h4>Start ny verden</h4>
-                            <p>Lag en ny verden hvor du kan eksperimentere fritt.</p>
+                            <h4>Følg instruksjonene</h4>
+                            <p>Hvert kurs vil ha spesifikke steg for å sette opp ditt utviklingsmiljø (Minecraft, Roblox Studio, eller en Python-editor).</p>
                         </div>
                     </div>
                     <div class="step">
                         <div class="step-number">3</div>
                         <div class="step-content">
-                            <h4>Åpne kodebyggeren</h4>
-                            <p>Trykk på den rosa puslespillbrikken "MakeCode" for å begynne å kode!</p>
+                            <h4>Begynn å kode!</h4>
+                            <p>Med alt satt opp, er du klar til å skrive din første linje med kode!</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- NEW: Quick access section -->
-            <div class="tips-section">
-                <h2>⚡ Hurtigtilgang</h2>
-                <div class="tips-grid">
-                    <div class="tip-card" style="border-top-color: #28a745;">
-                        <h4>📖 Grunnleggende</h4>
-                        <p>Start med Dag 1-2 for å lære programmering fra bunnen av</p>
-                        <a href="dag1.html" style="color: #28a745; text-decoration: none; font-weight: bold;">→ Start her</a>
-                    </div>
-                    <div class="tip-card" style="border-top-color: #ffc107;">
-                        <h4>🔧 Byggeprosjekter</h4>
-                        <p>Dag 3-4 for interaktive systemer og avanserte prosjekter</p>
-                        <a href="dag3.html" style="color: #ffc107; text-decoration: none; font-weight: bold;">→ Bygg noe kult</a>
-                    </div>
-                    <div class="tip-card" style="border-top-color: #17a2b8;">
-                        <h4>🐍 Avansert</h4>
-                        <p>Snake-spill og andre kule eksempler for erfarne kodere</p>
-                        <a href="koder.html" style="color: #17a2b8; text-decoration: none; font-weight: bold;">→ Se eksempler</a>
-                    </div>
-                    <div class="tip-card" style="border-top-color: #6f42c1;">
-                        <h4>🎓 Presentasjon</h4>
-                        <p>Dag 5 for å fullføre kurset og vise frem til foreldre</p>
-                        <a href="dag5.html" style="color: #6f42c1; text-decoration: none; font-weight: bold;">→ Avslutt kurset</a>
                     </div>
                 </div>
             </div>
@@ -201,26 +141,26 @@
                 <div class="tips-grid">
                     <div class="tip-card">
                         <h4>🔧 Feilsøking</h4>
-                        <p>Hvis koden ikke fungerer, sjekk alltid syntax først - kolon, innrykk og riktig stavemåte!</p>
+                        <p>Koder har feil! Det er helt normalt. Lær deg å lese feilmeldinger og feilsøke steg for steg.</p>
                     </div>
                     <div class="tip-card">
                         <h4>📝 Notater</h4>
-                        <p>Skriv ned koordinater og viktige kodelinjer. Det gjør det lettere å huske senere!</p>
+                        <p>Skriv ned hva du lærer, viktige kommandoer eller ideer. Det hjelper deg å huske og forstå.</p>
                     </div>
                     <div class="tip-card">
                         <h4>🤝 Samarbeid</h4>
-                        <p>Spør læreren eller medelever hvis du står fast. Programmering læres best sammen!</p>
+                        <p>Diskuter koden med venner eller lærere. To hoder tenker bedre enn ett!</p>
                     </div>
                     <div class="tip-card">
                         <h4>🎯 Øv deg</h4>
-                        <p>Prøv å endre på koden og se hva som skjer. Det beste er å eksperimentere!</p>
+                        <p>Det beste er å eksperimentere! Endre koden, se hva som skjer, og prøv å lage dine egne ting.</p>
                     </div>
                 </div>
             </div>
         </main>
 
         <footer>
-            <p>© 2025 Minecraft Kodekurs - Laget for læring og moro! 🎉</p>
+            <p>© 2025 Kodekurs for Barn - Laget for læring og moro! 🎉</p>
         </footer>
     </div>
 </body>
