feat: Organize course pages into dedicated directories

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <strong>Hovedaktivitet:</strong> Bygg og utforsk! 🌍
                         </div>
                     </div>
-                    <a href="dag1.html" class="day-link" style="background: linear-gradient(45deg, #28a745, #218838);">Start Minecraft Kurset →</a>
+                    <a href="minecraft/index.html" class="day-link" style="background: linear-gradient(45deg, #28a745, #218838);">Start Minecraft Kurset →</a>
                 </div>
 
                 <!-- Roblox Kurs -->
@@ -61,7 +61,7 @@
                             <strong>Hovedaktivitet:</strong> Bygg et Obby! 🏃
                         </div>
                     </div>
-                    <a href="roblox.html" class="day-link" style="background: linear-gradient(45deg, #007bff, #0056b3);">Start Roblox Kurset →</a>
+                    <a href="roblox/index.html" class="day-link" style="background: linear-gradient(45deg, #007bff, #0056b3);">Start Roblox Kurset →</a>
                 </div>
 
                 <!-- Python Kurs -->
@@ -82,7 +82,7 @@
                             <strong>Hovedaktivitet:</strong> Første program! 🚀
                         </div>
                     </div>
-                    <a href="python.html" class="day-link" style="background: linear-gradient(45deg, #ffc107, #e0a800);">Start Python Kurset →</a>
+                    <a href="python/index.html" class="day-link" style="background: linear-gradient(45deg, #ffc107, #e0a800);">Start Python Kurset →</a>
                 </div>
 
                 <!-- Koder og Eksempler (Flyttet opp litt for tydelighet) -->
