--- a/minecraft/dag2.html
+++ b/minecraft/dag2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dag 2 - Minecraft Kodekurs</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="success-message" id="successMessage">Kode kopiert! 📋</div>
@@ -16,7 +16,7 @@
         </header>
 
         <nav class="nav">
-            <a href="index.html">🏠 Hjem</a>
+            <a href="../index.html">🏠 Hjem</a>
             <a href="dag1.html">Dag 1</a>
             <a href="dag2.html" class="active">Dag 2</a>
             <a href="dag3.html">Dag 3</a>
