--- a/python/index.html
+++ b/python/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Grunnkurs - Kodekurs for Barn</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="container">
@@ -16,8 +16,8 @@
         </header>
 
         <nav class="nav">
-            <a href="index.html">🏠 Hjem</a>
-            <a href="python.html" class="active">Python Oversikt</a>
+            <a href="../index.html">🏠 Hjem</a>
+            <a href="index.html" class="active">Python Oversikt</a>
             <!-- Når du lager dager, kan de legges til her, f.eks: -->
             <!-- <a href="python_dag1.html">Dag 1</a> -->
             <!-- <a href="python_dag2.html">Dag 2</a> -->
@@ -51,7 +51,7 @@
             </section>
 
             <div style="text-align: center; margin-top: 40px;">
-                <a href="index.html" class="day-link">🏠 Tilbake til hovedmenyen</a>
+                <a href="../index.html" class="day-link">🏠 Tilbake til hovedmenyen</a>
             </div>
         </main>
 
