--- a/minecraft/dag5.html
+++ b/minecraft/dag5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dag 5 - Minecraft Kodekurs</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="success-message" id="successMessage">Kode kopiert! 📋</div>
@@ -16,7 +16,7 @@
         </header>
 
         <nav class="nav">
-            <a href="index.html">🏠 Hjem</a>
+            <a href="../index.html">🏠 Hjem</a>
             <a href="dag1.html">Dag 1</a>
             <a href="dag2.html">Dag 2</a>
             <a href="dag3.html">Dag 3</a>
@@ -643,7 +643,7 @@ Nå kan jeg lage mine egne spill og systemer i Minecraft!"</pre>
             <!-- Navigasjon -->
             <div style="text-align: center; margin-top: 40px;">
                 <a href="dag4.html" class="day-link" style="margin-right: 20px;">← Forrige: Dag 4</a>
-                <a href="index.html" class="day-link">🏠 Tilbake til forsiden</a>
+                <a href="../index.html" class="day-link">🏠 Tilbake til forsiden</a>
             </div>
         </main>
 
