--- a/roblox/index.html
+++ b/roblox/index.html
@@ -18,9 +18,27 @@
         <nav class="nav">
             <a href="../index.html">🏠 Hjem</a>
             <a href="index.html" class="active">Roblox Oversikt</a>
-            <!-- Når du lager dager, kan de legges til her, f.eks: -->
-            <!-- <a href="roblox_dag1.html">Dag 1</a> -->
-            <!-- <a href="roblox_dag2.html">Dag 2</a> -->
+            <details class="dropdown-nav">
+                <summary>Dager</summary>
+                <div class="dropdown-content">
+                    <a href="dag1.html">Dag 1</a>
+                    <a href="dag2.html">Dag 2</a>
+                    <a href="dag3.html">Dag 3</a>
+                    <a href="dag4.html">Dag 4</a>
+                    <a href="dag5.html">Dag 5</a>
+                    <a href="dag6.html">Dag 6</a>
+                    <a href="dag7.html">Dag 7</a>
+                    <a href="dag8.html">Dag 8</a>
+                    <a href="dag9.html">Dag 9</a>
+                    <a href="dag10.html">Dag 10</a>
+                    <a href="dag11.html">Dag 11</a>
+                    <a href="dag12.html">Dag 12</a>
+                    <a href="dag13.html">Dag 13</a>
+                    <a href="dag14.html">Dag 14</a>
+                    <a href="dag15.html">Dag 15</a>
+                    <a href="dag16.html">Dag 16</a>
+                </div>
+            </details>
         </nav>
 
         <main>
@@ -46,7 +64,7 @@
                     <h3>🚀 Neste Steg: Dag 1</h3>
                 </div>
                 <p>Vi gleder oss til å starte! Følg med for de første dagene med spennende innhold.</p>
-                <p><strong>Snart kommer:</strong> Introduksjon til Studio og din første Lua-kode!</p>
+                <p><strong>Start her:</strong> <a href="dag1.html">Dag 1: Introduksjon til Roblox Studio</a></p>
             </section>
 
             <div style="text-align: center; margin-top: 40px;">
